feat: create section bio

--- a/index.html
+++ b/index.html
@@ -120,6 +120,19 @@
               </span>
             </a>
           </div>
+          <div class="about__info">
+            <a class="about__info--link" href="#">
+              <img class="about__info-img" src="./img/arrow_down.svg" alt="">
+            </a>
+          </div>
+        </section>
+        <section class="bio">
+          <h2 class="bio__title">
+            Кто я?
+          </h2>
+          <p class="bio__info">
+            Приветствую, земляне! Я Даниил Троянов, ваш дружелюбный амбициозный Джедай-фронтендер. Мои навыки программирования острее, чем световой меч, и я на миссии превращения кофеина в код. Говорят, что я владею бинарным и саркастическим языками, и я считаю, что баги - это просто не задокументированные фичи.
+          </p>
         </section>
       </div>
     </main>
