feat: create section work

--- a/index.html
+++ b/index.html
@@ -122,19 +122,60 @@
           </div>
           <div class="about__info">
             <a class="about__info--link" href="#">
-              <img class="about__info-img" src="./img/arrow_down.svg" alt="">
+              <img class="about__info-img" src="./img/arrow_down.svg" alt="" />
             </a>
           </div>
         </section>
+      </div>
+      <div class="container">
         <section class="bio">
-          <h2 class="bio__title">
-            Кто я?
-          </h2>
+          <h2 class="bio__title">Кто я?</h2>
           <p class="bio__info">
-            Приветствую, земляне! Я Даниил Троянов, ваш дружелюбный амбициозный Джедай-фронтендер. Мои навыки программирования острее, чем световой меч, и я на миссии превращения кофеина в код. Говорят, что я владею бинарным и саркастическим языками, и я считаю, что баги - это просто не задокументированные фичи.
+            Приветствую, земляне! Я Даниил Троянов, ваш дружелюбный амбициозный
+            Джедай-фронтендер. Мои навыки программирования острее, чем световой
+            меч, и я на миссии превращения кофеина в код. Говорят, что я владею
+            бинарным и саркастическим языками, и я считаю, что баги - это просто
+            не задокументированные фичи.
           </p>
         </section>
       </div>
+      <section class="work">
+        <div class="container">
+          <h2 class="works__title">
+            Мои последние
+            <span class="works__title-decoration"> работы </span>
+          </h2>
+          <p class="works__disc">
+            Однажды я рассказал компилятору шутку, и он так сильно засмеялся,
+            что произошла ошибка выполнения. Вот почему у меня еще нет
+            официальной записи работы - я все еще отлаживаю вселенную. Пока она
+            не заработает стабильно, я тут для вас, рекрутеры, жму на кнопочки и
+            рассказываю компьютерам, какие они классные. Но обещаю, скоро и
+            настоящие крутые работы добавлю, а пока -
+            <span class="works__dics-decoration">пощелкайте кнопочки</span> и
+            посмотрите, что я уже могу на JavaScript. Кнопочки это весело, но
+            ждите, скоро увидите, как я буду танцевать с кодом!
+          </p>
+          <input class="work__btn active" type="button" value="All" />
+          <input class="work__btn" type="button" value="UI" />
+          <input class="work__btn" type="button" value="UX" />
+          <input class="work__btn" type="button" value="Web Design" />
+          <div class="works__container">
+            <div class="works__container-element">
+              <h3 class="works__container-title">Какая-то технология</h3>
+              <img src="./img/work1.png" alt="work1" />
+            </div>
+            <div class="works__container-element">
+              <h3 class="works__container-title">Какая-то технология</h3>
+              <img src="./img/work1.png" alt="work1" />
+            </div>
+            <div class="works__container-element">
+              <h3 class="works__container-title">Какая-то технология</h3>
+              <img src="./img/work1.png" alt="work1" />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer"></footer>
   </body>
