feat: create section footer

--- a/index.html
+++ b/index.html
@@ -176,7 +176,41 @@
           </div>
         </div>
       </section>
+      <section class="skills">
+        <div class="container">
+          <h2 class="skills__tiltle">Мои навыки</h2>
+          <h3 class="skilss__disc">HTML5, CSS3</h3>
+          <div class="skills__info">
+            <div class="skills__info-elm"></div>
+          </div>
+          <h3 class="skilss__disc">JavaScript (на уровне основ)</h3>
+          <div class="skills__info">
+            <div class="skills__info-elm"></div>
+          </div>
+          <h3 class="skilss__disc">Git, GitHub</h3>
+          <div class="skills__info">
+            <div class="skills__info-elm"></div>
+          </div>
+          <h3 class="skilss__disc">
+            Illustrator (когда нужно создать идеальный световой меч)
+          </h3>
+          <div class="skills__info">
+            <div class="skills__info-elm"></div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="container">
+        <h2 class="footer__title">
+          Связаться со мной можно тут:
+        </h2>
+        <ul class="footer__list">
+          <li class="footer__list-item"><a class="footer__list-link" href="tel:77055837474">Телефон: 8705583747</a></li>
+          <li class="footer__list-item"><a class="footer__list-link" href="https://t.me/nillks_rss">Тelegram</a></li>
+          <li class="footer__list-item"><a class="footer__list-link" href="daniil.troanov2@gmail.com">Email</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
