--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniil Troyanov - Джедай-фронтенд РАЗРАБОТЧИК</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <header class="header">
@@ -122,7 +119,7 @@
           </div>
           <div class="about__info">
             <a class="about__info--link" href="#">
-              <img class="about__info-img" src="./img/arrow_down.svg" alt="" />
+              <img class="about__info-img" src="./img/arrow_down.svg" alt="arrow down">
             </a>
           </div>
         </section>
@@ -156,22 +153,22 @@
             посмотрите, что я уже могу на JavaScript. Кнопочки это весело, но
             ждите, скоро увидите, как я буду танцевать с кодом!
           </p>
-          <input class="work__btn active" type="button" value="All" />
-          <input class="work__btn" type="button" value="UI" />
-          <input class="work__btn" type="button" value="UX" />
-          <input class="work__btn" type="button" value="Web Design" />
+          <input class="work__btn active" type="button" value="All">
+          <input class="work__btn" type="button" value="UI">
+          <input class="work__btn" type="button" value="UX">
+          <input class="work__btn" type="button" value="Web Design">
           <div class="works__container">
             <div class="works__container-element">
               <h3 class="works__container-title">Какая-то технология</h3>
-              <img src="./img/work1.png" alt="work1" />
+              <img src="./img/work1.png" alt="work1">
             </div>
             <div class="works__container-element">
               <h3 class="works__container-title">Какая-то технология</h3>
-              <img src="./img/work1.png" alt="work1" />
+              <img src="./img/work1.png" alt="work1">
             </div>
             <div class="works__container-element">
               <h3 class="works__container-title">Какая-то технология</h3>
-              <img src="./img/work1.png" alt="work1" />
+              <img src="./img/work1.png" alt="work1">
             </div>
           </div>
         </div>
@@ -202,13 +199,23 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <h2 class="footer__title">
-          Связаться со мной можно тут:
-        </h2>
+        <h2 class="footer__title">Связаться со мной можно тут:</h2>
         <ul class="footer__list">
-          <li class="footer__list-item"><a class="footer__list-link" href="tel:77055837474">Телефон: 8705583747</a></li>
-          <li class="footer__list-item"><a class="footer__list-link" href="https://t.me/nillks_rss">Тelegram</a></li>
-          <li class="footer__list-item"><a class="footer__list-link" href="daniil.troanov2@gmail.com">Email</a></li>
+          <li class="footer__list-item">
+            <a class="footer__list-link" href="tel:77055837474"
+              >Телефон: 8705583747</a
+            >
+          </li>
+          <li class="footer__list-item">
+            <a class="footer__list-link" href="https://t.me/nillks_rss"
+              >Тelegram</a
+            >
+          </li>
+          <li class="footer__list-item">
+            <a class="footer__list-link" href="daniil.troanov2@gmail.com"
+              >Email</a
+            >
+          </li>
         </ul>
       </div>
     </footer>
