fix: edit errors validator

--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
             посмотрите, что я уже могу на JavaScript. Кнопочки это весело, но
             ждите, скоро увидите, как я буду танцевать с кодом!
           </p>
-          <input class="work__btn active" type="button" value="All">
-          <input class="work__btn" type="button" value="UI">
-          <input class="work__btn" type="button" value="UX">
-          <input class="work__btn" type="button" value="Web Design">
+          <button class="work__btn active">All</button>
+          <button class="work__btn">UI</button>
+          <button class="work__btn">UX</button>
+          <button class="work__btn">Web Designl</button>
           <div class="works__container">
             <div class="works__container-element">
               <h3 class="works__container-title">Какая-то технология</h3>
