--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
             посмотрите, что я уже могу на JavaScript. Кнопочки это весело, но
             ждите, скоро увидите, как я буду танцевать с кодом!
           </p>
-          <button class="work__btn active">All</button>
-          <button class="work__btn">UI</button>
-          <button class="work__btn">UX</button>
-          <button class="work__btn">Web Designl</button>
+          <button class="work__btn active" type="button">All</button>
+          <button class="work__btn" type="button">UI</button>
+          <button class="work__btn" type="button">UX</button>
+          <button class="work__btn" type="button">Web Designl</button>
           <div class="works__container">
             <div class="works__container-element">
               <h3 class="works__container-title">Какая-то технология</h3>
@@ -202,19 +202,13 @@
         <h2 class="footer__title">Связаться со мной можно тут:</h2>
         <ul class="footer__list">
           <li class="footer__list-item">
-            <a class="footer__list-link" href="tel:77055837474"
-              >Телефон: 8705583747</a
-            >
+            <a class="footer__list-link" href="tel:77055837474">Телефон: 8705583747</a>
           </li>
           <li class="footer__list-item">
-            <a class="footer__list-link" href="https://t.me/nillks_rss"
-              >Тelegram</a
-            >
+            <a class="footer__list-link" href="https://t.me/nillks_rss">Тelegram</a>
           </li>
           <li class="footer__list-item">
-            <a class="footer__list-link" href="daniil.troanov2@gmail.com"
-              >Email</a
-            >
+            <a class="footer__list-link" href="daniil.troanov2@gmail.com">Email</a>
           </li>
         </ul>
       </div>
