fix: edit errors validator

--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
             </a>
           </div>
           <div class="about__info">
-            <a class="about__info--link" href="#">
+            <a class="about__info--link" href="#down">&nbsp;
               <img class="about__info-img" src="./img/arrow_down.svg" alt="arrow down">
             </a>
           </div>
         </section>
       </div>
-      <div class="container">
+      <div class="container" id="down">
         <section class="bio">
           <h2 class="bio__title">Кто я?</h2>
           <p class="bio__info">
