fix: edit errors validator

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             <span class="about__title-decoration"> РАЗРАБОТЧИК </span>
           </h1>
           <div class="about__link">
-            <a href="" class="about__link-find"> Найми меня </a>
-            <a class="about__link-cv" href="">
+            <a class="about__link-find" href="#"> Найми меня </a>
+            <a class="about__link-cv" href="#">
               Download CV
               <span class="about__link-decoration">
                 <svg
