fix: edit errors validator

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <h2 class="footer__title">Связаться со мной можно тут:</h2>
         <ul class="footer__list">
           <li class="footer__list-item">
-            <a class="footer__list-link" href="tel:77055837474">Телефон: 8705583747</a>
+            <a class="footer__list-link" href="tel:77055837474">Телефон: 8705&nbsp;558&nbsp;3747</a>
           </li>
           <li class="footer__list-item">
             <a class="footer__list-link" href="https://t.me/nillks_rss">Тelegram</a>
