fix: edit errors validator

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
           <nav class="header__nav">
             <ul class="header__nav-list">
               <li class="header__nav-item">
-                <a class="header__nav-link" href="#"> Главная </a>
+                <a class="header__nav-link" href="#main">Главная</a>
               </li>
               <li class="header__nav-item">
-                <a class="header__nav-link" href="#"> Кто я? </a>
+                <a class="header__nav-link" href="#about">Кто я?</a>
               </li>
               <li class="header__nav-item">
-                <a class="header__nav-link" href="#"> Контакты </a>
+                <a class="header__nav-link" href="#contacts"> Контакты </a>
               </li>
             </ul>
           </nav>
@@ -80,8 +80,8 @@
             <span class="about__title-decoration"> РАЗРАБОТЧИК </span>
           </h1>
           <div class="about__link">
-            <a class="about__link-find" href="#"> Найми меня </a>
-            <a class="about__link-cv" href="#">
+            <a class="about__link-find" href="#find">Найми меня</a>
+            <a class="about__link-cv" href="#cv">
               Download CV
               <span class="about__link-decoration">
                 <svg
@@ -139,8 +139,7 @@
       <section class="work">
         <div class="container">
           <h2 class="works__title">
-            Мои последние
-            <span class="works__title-decoration"> работы </span>
+            Мои последние <span class="works__title-decoration">работы</span>
           </h2>
           <p class="works__disc">
             Однажды я рассказал компилятору шутку, и он так сильно засмеялся,
