--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="header__top">
           <div class="header__logo">
-            <a class="header__logo-link" href="#">
+            <a class="header__logo-link" href="#logo">
               <svg
                 class="header__logo-img"
                 width="150"
@@ -201,7 +201,7 @@
         <h2 class="footer__title">Связаться со мной можно тут:</h2>
         <ul class="footer__list">
           <li class="footer__list-item">
-            <a class="footer__list-link" href="tel:77055837474">Телефон: 8705&nbsp;558&nbsp;3747</a>
+            <a class="footer__list-link" href="tel:123-456-7890">123&nbsp;-&nbsp;456&nbsp;-&nbsp;7890</a>
           </li>
           <li class="footer__list-item">
             <a class="footer__list-link" href="https://t.me/nillks_rss">Тelegram</a>
