--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniil Troyanov - Джедай-фронтенд РАЗРАБОТЧИК</title>
+    <title>Daniil Troyanov</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -39,7 +39,7 @@
                 <a class="header__nav-link" href="#about">Кто я?</a>
               </li>
               <li class="header__nav-item">
-                <a class="header__nav-link" href="#contacts"> Контакты </a>
+                <a class="header__nav-link" href="#contacts">Контакты</a>
               </li>
             </ul>
           </nav>
@@ -76,8 +76,8 @@
       <div class="container">
         <section class="about">
           <h1 class="about__title">
-            Джедай-фронтенд
-            <span class="about__title-decoration"> РАЗРАБОТЧИК </span>
+            Джедай&#8209;фронтенд
+            <span class="about__title-decoration">РАЗРАБОТЧИК</span>
           </h1>
           <div class="about__link">
             <a class="about__link-find" href="#find">Найми меня</a>
@@ -127,13 +127,7 @@
       <div class="container" id="down">
         <section class="bio">
           <h2 class="bio__title">Кто я?</h2>
-          <p class="bio__info">
-            Приветствую, земляне! Я Даниил Троянов, ваш дружелюбный амбициозный
-            Джедай-фронтендер. Мои навыки программирования острее, чем световой
-            меч, и я на миссии превращения кофеина в код. Говорят, что я владею
-            бинарным и саркастическим языками, и я считаю, что баги - это просто
-            не задокументированные фичи.
-          </p>
+          <p class="bio__info">Приветствую, земляне! Я Даниил Троянов, ваш дружелюбный амбициозный Джедай&#8209;фронтендер. Мои навыки программирования острее, чем световой меч, и я на миссии превращения кофеина в код. Говорят, что я владею бинарным и саркастическим языками, и я считаю, что баги - это просто не задокументированные фичи.</p>
         </section>
       </div>
       <section class="work">
@@ -141,17 +135,7 @@
           <h2 class="works__title">
             Мои последние <span class="works__title-decoration">работы</span>
           </h2>
-          <p class="works__disc">
-            Однажды я рассказал компилятору шутку, и он так сильно засмеялся,
-            что произошла ошибка выполнения. Вот почему у меня еще нет
-            официальной записи работы - я все еще отлаживаю вселенную. Пока она
-            не заработает стабильно, я тут для вас, рекрутеры, жму на кнопочки и
-            рассказываю компьютерам, какие они классные. Но обещаю, скоро и
-            настоящие крутые работы добавлю, а пока -
-            <span class="works__dics-decoration">пощелкайте кнопочки</span> и
-            посмотрите, что я уже могу на JavaScript. Кнопочки это весело, но
-            ждите, скоро увидите, как я буду танцевать с кодом!
-          </p>
+          <p class="works__disc">Однажды я рассказал компилятору шутку, и он так сильно засмеялся, что произошла ошибка выполнения. Вот почему у меня еще нет официальной записи работы - я все еще отлаживаю вселенную. Пока она не заработает стабильно, я тут для вас, рекрутеры, жму на кнопочки и рассказываю компьютерам, какие они классные. Но обещаю, скоро и настоящие крутые работы добавлю, а пока &#8209; <span class="works__dics-decoration">пощелкайте кнопочки</span> и посмотрите, что я уже могу на JavaScript. Кнопочки это весело, но ждите, скоро увидите, как я буду танцевать с кодом!</p>
           <button class="work__btn active" type="button">All</button>
           <button class="work__btn" type="button">UI</button>
           <button class="work__btn" type="button">UX</button>
@@ -201,7 +185,7 @@
         <h2 class="footer__title">Связаться со мной можно тут:</h2>
         <ul class="footer__list">
           <li class="footer__list-item">
-            <a class="footer__list-link" href="tel:123-456-7890">123&nbsp;-&nbsp;456&nbsp;-&nbsp;7890</a>
+            <a class="footer__list-link" href="tel:123-456-7890">+7(705)583&#8209;75&#8209;74</a>
           </li>
           <li class="footer__list-item">
             <a class="footer__list-link" href="https://t.me/nillks_rss">Тelegram</a>
