feat: create popup and animate block and typing text

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daniil Troyanov - Джедай-фронтенд РАЗРАБОТЧИК</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header class="header">
@@ -44,22 +47,21 @@
           </nav>
           <div class="header__theme-switcher">
             <svg
-                class="header__theme-icon"
-                fill="transparent"
-                height="50px"
-                width="100px"
-                version="1.1"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                viewBox="0 0 100 40"
-                xml:space="preserve"
-              >
-                <!-- Outer Background -->
-                <rect width="100%" height="100%" rx="20" ry="20" fill="#00ADB5" />
+              class="header__theme-icon"
+              fill="transparent"
+              height="50px"
+              width="100px"
+              version="1.1"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              viewBox="0 0 100 40"
+              xml:space="preserve"
+            >
+              <!-- Outer Background -->
+              <rect width="100%" height="100%" rx="20" ry="20" fill="#00ADB5" />
 
-                <!-- Circle Slider -->
+              <!-- Circle Slider -->
             </svg>
-
           </div>
         </div>
       </div>
@@ -68,9 +70,12 @@
       <div class="container">
         <section class="about">
           <h1 class="about__title">
-            Джедай-фронтенд
-            <span class="about__title-decoration"> РАЗРАБОТЧИК </span>
+            <!-- Джедай-фронтенд -->
           </h1>
+          <h2 class="about__title-decoration">
+            <!-- РАЗРАБОТЧИК -->
+          </h2>
+
           <div class="about__link">
             <a href="" class="about__link-find"> Найми меня </a>
             <a class="about__link-cv" href="">
@@ -109,15 +114,76 @@
               </span>
             </a>
           </div>
+          <div class="find__info">
+            <div class="find__info-text">
+              <p>
+                <span class="find__info-close"> &times </span>
+
+                Привет, потенциальные создатели веб-чудес! Я - ваш идеальный
+                кандидат на роль фронтенд разработчика, если ваш определитель
+                "идеальности" включает в себя отсутствие какого-либо опыта и
+                понимание в мире веб-технологий на уровне
+                <span class="find-decoration">
+                  "Интернет - это это то, что работает в компьютере, да?"
+                </span>
+                Почему меня стоит нанять:
+              </p>
+              <ol>
+                <li>
+                  <b>Вакуум чистого разума:</b> Нет предвзятости, нет
+                  стереотипов. Я начну с чистого листа и создам что-то такое,
+                  что вас удивит - в хорошем смысле.
+                </li>
+                <li>
+                  <b>Классика в новом свете:</b> Кто сказал, что неопытность это
+                  плохо? Я вижу это как свежий взгляд на традицию. Подготовьтесь
+                  к тому, чтобы ваше приложение стало "ретро-футуристичным" -
+                  таким стиль еще никто не пробовал!
+                </li>
+                <li>
+                  <b>Функциональность по определению:</b> Я тут нет только для
+                  того, чтобы делать красиво. Я также умею "нажимать кнопки",
+                  "вставлять ссылки" и даже "переключать вкладки". Вот такие у
+                  меня навыки - вау!
+                </li>
+                <li>
+                  <b>Борьба за неперфекцию:</b> Забудьте о совершенстве. Мы не
+                  ищем ошибки, мы ищем характер! Чем больше багов, тем
+                  интереснее путешествие.
+                </li>
+                <li>
+                  <b>Опыт и образование:</b> "Школа жизни" всегда была моим
+                  наставником, и я, кажется, великолепно освоил искусство ничего
+                  не уметь. Теперь в поиске работодателя, готового оценить
+                  высший уровень невежества с улыбкой!"
+                </li>
+              </ol>
+            </div>
+          </div>
+          <div class="cv__info-text">
+            <span class="cv__info-close"> &times </span>
+
+            Почему у меня нет CV? Ну, когда ты такой уникальный индивид, что
+            даже твои навыки пугают стандартные резюме, создать CV становится
+            подвигом. Ведь почему просто написать "умею программировать", когда
+            можно создать мистическую ауру тайны вокруг своих навыков и дать
+            работодателю настоящий квест в поиске своего идеального кандидата?
+            Готов превратить обыденный отбор персонала в увлекательное
+            приключение!
+          </div>
           <div class="about__info">
-            <a class="about__info--link" href="#down">
-              <img class="about__info-img" src="./img/arrow_down.svg" alt="arrow down">
+            <a class="about__info--link jump" href="#down">
+              <img
+                class="about__info-img"
+                src="./img/arrow_down.svg"
+                alt="arrow down"
+              />
             </a>
           </div>
         </section>
       </div>
       <div class="container">
-        <section class="bio">
+        <section class="bio" id="down">
           <h2 class="bio__title">Кто я?</h2>
           <p class="bio__info">
             Приветствую, земляне! Я Даниил Троянов, ваш дружелюбный амбициозный
@@ -152,15 +218,15 @@
           <div class="works__container">
             <div class="works__container-element">
               <h3 class="works__container-title">Какая-то технология</h3>
-              <img src="./img/work1.png" alt="work1">
+              <img src="./img/work1.png" alt="work1" />
             </div>
             <div class="works__container-element">
               <h3 class="works__container-title">Какая-то технология</h3>
-              <img src="./img/work1.png" alt="work1">
+              <img src="./img/work1.png" alt="work1" />
             </div>
             <div class="works__container-element">
               <h3 class="works__container-title">Какая-то технология</h3>
-              <img src="./img/work1.png" alt="work1">
+              <img src="./img/work1.png" alt="work1" />
             </div>
           </div>
         </div>
@@ -194,17 +260,27 @@
         <h2 class="footer__title">Связаться со мной можно тут:</h2>
         <ul class="footer__list">
           <li class="footer__list-item">
-            <a class="footer__list-link" href="tel:77055837474">Телефон: 8705583747</a>
+            <a class="footer__list-link" href="tel:77055837474"
+              >Телефон: 8705583747</a
+            >
           </li>
           <li class="footer__list-item">
-            <a class="footer__list-link" href="https://t.me/nillks_rss">Тelegram</a>
+            <a class="footer__list-link" href="https://t.me/nillks_rss"
+              >Тelegram</a
+            >
           </li>
           <li class="footer__list-item">
-            <a class="footer__list-link" href="daniil.troanov2@gmail.com">Email</a>
+            <a class="footer__list-link" href="daniil.troanov2@gmail.com"
+              >Email</a
+            >
           </li>
         </ul>
       </div>
     </footer>
+    <script src="./js/writeText.js"></script>
+    <script src="./js/cv.js"></script>
     <script src="./js/toogle.js"></script>
+    <script src="./js/down.js"></script>
+    <script src="./js/findMe.js"></script>
   </body>
 </html>
